--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="stylesheet" href="index.css">
-    <title>Twilytics</title>
+    <title>twilytic</title>
   </head>
   <body>
     <noscript>
